feat: openapi docs for authors and categories
